# cMWF

./: .gitignore  README.md  main.py  pyproject.toml
configs/: cmwf.yaml  default.yaml
fast_nls_src/: single_pitch.py
fast_nls_src/cpp/lib/: Makefile
fast_nls_src/example/: analyseSpeech.py
scripts/: plot_bandpassed_harmonics_may_2025.py  plot_multiple_vs_delta_strategy_july_2025.py  plot_spectrograms.py  quick_cyclic_mvdr_old.py  quick_mvdr_test.py  widely_linear_cmvdr.py
src/: beamformer_manager.py  coherence_manager.py  config.py  covariance_estimator.py  cyclic_mwf.py  data_generator.py  evaluator.py  experiment_manager.py  f0_estimator.py  f0_manager.py  manager.py  modulator.py  player.py  plotter.py  sin_generator.py  utils.py
