[project]
name = "cyclic-multichannel-wiener-filter"
version = "0.1.0"
description = "Code for cyclic multichannel Wiener filtering"
requires-python = ">=3.9"

dependencies = [
    "librosa>=0.11.0",
    "pesq>=0.0.4",
    "prettytable>=3.16.0",
    "pysepm-evo>=0.1.1",
    "pystoi>=0.4.1",
    "speechmos>=0.0.1.1",
]
